# ADRS-Leaderboard

./: .gitignore  README.md  main.sh  pairs.txt  run_in_container.sh  test_local.sh
problems/: README.md
problems/cant_be_late/: .gitignore  README.md  config.yaml  download_datasets.sh  evaluate.sh  evaluator.py  run_evaluator.sh  set_up_env.sh
problems/cant_be_late_multi/: README.md  config.yaml  download_datasets.sh  evaluator.py  run_evaluator.sh  set_up_env.sh
problems/cloudcast/: README.md  config.yaml  download_datasets.sh  evaluate.sh  evaluator.py  output_program.py  run_evaluator.sh  set_up_env.sh
problems/eplb/: README.md  download_datasets.sh  evaluate.sh  evaluator.py  output_program.py  run_evaluator.sh  set_up_env.sh
problems/llm_sql/: README.md  config.yaml  download_datasets.sh  evaluate.sh  evaluator.py  run_evaluator.sh  set_up_env.sh
problems/llm_sql/resources/: baseline_result.json  pyproject.toml  utils.py
problems/multiagent_system/: README.md  config.yaml  download_datasets.sh  evaluate.sh  evaluator.py  requirements.txt  run_evaluator.sh  set_up_env.sh
problems/prism/: README.md  download_datasets.sh  evaluate.sh  evaluator.py  initial_program.py  run_evaluator.sh
problems/telemetry_repair/: README.md  download_datasets.sh  evaluate.sh  evaluator.py  output_program.py  run_evaluator.sh  set_up_env.sh
problems/telemetry_repair/resources/: initial_program.py  pyproject.toml  submission_spec.json
problems/txn_scheduling/: README.md  (+6 more)
problems/txn_scheduling/resources/: pyproject.toml  submission_spec.json
solutions/: README.md
(+107 files in other folders)
