[project]
name = "telemetry-repair-problem"
version = "0.1.0"
description = "Resources for TELEMETRY_REPAIR problem"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
